# memory-pgvector

./: .gitignore  BENCHMARK.md  PLAN.md  README.md  ROADMAP.md  UPCOMING.md  benchmark.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py
docker/: Dockerfile  compose.yml  entrypoint.sh
hexus/: __init__.py  embed.py  embedder.py  plugin.yaml  store.py  writer.py
hexus/migrations/: 001_schema.sql
mcp_server/: __init__.py  cli.py  server.py  tools.py
pgvector/: __init__.py  embed.py  embedder.py  plugin.yaml  store.py  writer.py
pgvector/migrations/: 001_schema.sql
tests/: test_embedder.py  test_mcp_server.py  test_migration.py  test_smoke.py
