[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexus"
version = "0.4.0"
description = "Hexus: Postgres + hexus memory provider plugin for hermes-agent AND a standalone MCP server. Local BERT (MiniLM-L6-v2) embeddings replace the upstream HTTP embedder; multi-agent storage with per-minion themes, async writer, no LLM in the memory hot path."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Toby (fork maintainer)" },
    { name = "Andrea Borghi", email = "andrea@example.invalid" },
]
keywords = [
    "hermes-agent",
    "memory-provider",
    "hexus",
    "postgres",
    "multi-agent",
    "llm-memory",
    "semantic-search",
    "bert",
    "sentence-transformers",
    "local-embeddings",
    "mcp",
    "model-context-protocol",
    "hexus",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies. Upper bounds per the hermes-agent supply-chain
# pinning policy (CONTRIBUTING.md, "Dependency pinning policy").
# sentence-transformers is the local BERT backend; mcp[cli] is the MCP
# server SDK (Phase 3 of PLAN.md) — `cli` adds the FastMCP + uvicorn
# extras needed for streamable-http transport.
dependencies = [
    "psycopg[binary]>=3.3.4,<4",
    "psycopg-pool>=3.3.1,<4",
    "PyYAML>=6.0,<7",
    "sentence-transformers>=2.7.0,<4",
    "numpy>=1.24,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.23,<2",
]
# The MCP extra is what the mcp_server/ package needs. We pull `mcp[cli]`
# (the official Anthropic-maintained Python SDK, https://github.com/modelcontextprotocol/python-sdk)
# for the FastMCP server class plus uvicorn + starlette for the
# streamable-http transport. Operators that only want the Hermes plugin
# don't need to install this — `pip install hexus[mcp]`.
mcp = [
    "mcp[cli]>=1.0,<2",
]

[project.urls]
Homepage      = "https://github.com/codenamekt/hexus"
Source        = "https://github.com/codenamekt/hexus"
Upstream      = "https://github.com/andreab67/hermes-hexus"
Issues        = "https://github.com/codenamekt/hexus/issues"
Roadmap       = "https://github.com/codenamekt/hexus/blob/main/PLAN.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where   = ["."]
include = ["hexus*", "mcp_server*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
hexus = ["plugin.yaml", "migrations/*.sql"]

[project.scripts]
# `hexus-mcp serve --transport stdio` (or http) is the MCP
# server entry point. Installed by `pip install hexus[mcp]`.
hexus-mcp = "mcp_server.cli:main"
